fix: ensure correct order of input fields when squashed on narrower screens

--- a/style.css
+++ b/style.css
@@ -111,19 +111,12 @@ form {
     gap: 20px;
 }
 
-.left-col,
-.right-col {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-}
-
 
 ul {
     list-style: none;
     display: flex;
     justify-content: space-between;
-    gap: 20px;
+    gap: 15px;
     flex-wrap: wrap;
 }
 
